--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT=5000
-GEMINI_API_KEY=AIzaSyDARr3xrYb4S05XBPx6mqslaPdpxaNsQN0
+GEMINI_API_KEY=
 DB_HOST=localhost
 DB_USER=postgres
 DB_PASSWORD=123456
